fix metamask button alignment

--- a/src/primeToken/prime-token.scss
+++ b/src/primeToken/prime-token.scss
@@ -28,6 +28,7 @@
 
     .mmButton {
       grid-area: mmButton;
+      margin-left: auto;
     }
 
     .secondRow {
