--- a/src/resources/elements/metamask-token-button/metamask-token-button.scss
+++ b/src/resources/elements/metamask-token-button/metamask-token-button.scss
@@ -4,7 +4,6 @@ button.mmTokenButton.button1 {
   white-space: normal;
   display: flex;
   align-items: center;
-  margin-left: auto;
   img {
     margin-right: 7px;
   }
